--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporteauditoriarendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Ajax/ajaxreporteauditoriarendicion.html.twig
@@ -3,37 +3,44 @@
 	    <div class="labelform">Tipo gasto:</div>
 	    <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
 	</div>
-	<div id="aniodesde"></div>
+	<div id="descripciongasto"></div>
 
 {% elseif muestra==3 %}
+	<div class="contenedorform">
+	    <div class="labelform">descripciongasto:</div>
+	    <div class="widgetform">{{ form_widget(form.descripciongasto,{'attr':{'style':'width:250px'}}) }}</div>
+	</div>
+	<div id="aniodesde"></div>
+
+{% elseif muestra==4 %}
     <div class="contenedorform">
         <div class="labelform" style="width:285px;">Año desde:</div>
         <div class="widgetform">Desde: {{ form_widget(form.aniodesde,{'attr':{'style':'width:100px'}}) }}</div>
     </div>
         <div id="aniohasta"></div>
 
-{% elseif muestra==4 %}
+{% elseif muestra==5 %}
     <div class="contenedorform">
         <div class="labelform" style="width:285px;">Año hasta:</div>
         <div class="widgetform">Hasta: {{ form_widget(form.aniohasta,{'attr':{'style':'width:100px'}}) }}</div>
     </div>
     <div id="mesdesde"></div>
 
-{% elseif muestra==5 %}
+{% elseif muestra==6 %}
     <div class="contenedorform">
         <div class="labelform" style="width:285px;">Mes desde:</div>
         <div class="widgetform">Desde: {{ form_widget(form.mesdesde,{'attr':{'style':'width:100px'}}) }}</div>
     </div>
     <div id="meshasta"></div>
 
-{% elseif muestra==6 %}
+{% elseif muestra==7 %}
     <div class="contenedorform">
         <div class="labelform" style="width:285px;">Mes hasta:</div>
         <div class="widgetform">Hasta: {{ form_widget(form.meshasta,{'attr':{'style':'width:100px'}}) }}</div>
     </div>
     <div id="cobertura"></div>
 
-{% elseif muestra==7 %}
+{% elseif muestra==8 %}
 	
     <div class="contenedorform">
         <div class="labelform">Cobertura:</div>
@@ -47,16 +54,24 @@
 
         $('#reporte_tipogasto').click(function(){
             var dato = $("#reporte_tipogasto").val();
-            var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '3'}) }}";
+            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '3'}) }}";
+            ruta = ruta.replace("variable", dato);
+            $('#descripciongasto').load(ruta);
+            $('#boton').hide();
+        });
+
+
+        $('#reporte_descripciongasto').click(function(){
+            var dato = $("#reporte_descripciongasto").val();
+            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '4'}) }}";
             ruta = ruta.replace("variable", dato);
             $('#aniodesde').load(ruta);
             $('#boton').hide();
         });
 
-
         $('#reporte_aniodesde').change(function(){
             var dato = $("#reporte_aniodesde").val();
-            var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '4'}) }}";
+            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '5'}) }}";
             ruta = ruta.replace("variable", dato);
             $('#aniohasta').load(ruta);
             $('#boton').hide();
@@ -64,7 +79,7 @@
 
         $('#reporte_aniohasta').change(function(){
             var dato = $("#reporte_aniohasta").val();
-            var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '5'}) }}";
+            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '6'}) }}";
             ruta = ruta.replace("variable", dato);
             $('#mesdesde').load(ruta);
             $('#boton').hide();
@@ -73,7 +88,7 @@
 
         $('#reporte_mesdesde').change(function(){
             var dato = $("#reporte_mesdesde").val();
-            var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '6'}) }}";
+            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '7'}) }}";
             ruta = ruta.replace("variable", dato);
             $('#meshasta').load(ruta);
             $('#boton').hide();
@@ -91,7 +106,7 @@
 
 	        	var dato = [ad,ah,md,mh,"::",cor];
 
-	            var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '7'}) }}";
+	            var ruta = "{{ path('ajaxreporteauditoriarendicion', {'dato': 'variable','muestra': '8'}) }}";
 	            ruta = ruta.replace("variable", dato);
 	            $('#cobertura').load(ruta);
 	            $('#boton').hide();
