--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -81,9 +81,11 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="{{ path('corresponsalia_reporteauestadofondo') }}">Auditoria Estado Fondo</a></li>
+          <li><a href="{{ path('corresponsalia_reporteauef') }}">Auditoria Estado Fondo</a></li>
+          {% if is_granted('ROLE_SUPERADMIN') %} 
           <li><a href="{{ path('corresponsalia_reporteaurendicion') }}">Auditoria Rendición</a></li>
-          <li><a href="{{ path('corresponsalia_reporteaurendicion') }}">Rendición</a></li>
+          {% endif %}
+          <li><a href="{{ path('corresponsalia_reporterendicion') }}">Rendición</a></li>
           {% if is_granted('ROLE_CONSULTORIA') %}
             <li><a href="#">Personal en Corresponsalías</a></li>
           {% endif %}
