--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/rendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/rendicion.html.twig
@@ -7,14 +7,13 @@
 {% endblock %}
 
 {% block titulomodulo %}
-    <h1>REPORTE DE AUDITORIA ESTADO FONDO</h1>
+    <h1>REPORTE DE RENDICIÓN</h1>
 {% endblock %}
     
 {% block body -%}
     {{ parent() }}
-    
 
-    <form novalidate method="post" action="{{ path('corresponsalia_creareporteauef') }}">
+    <form novalidate method="post" action="{{ path('corresponsalia_creareporterendicion') }}">
         {{ form_widget(form._token) }}
         <div class="formShow" style="width:70%;">
             <div class="contenedorform">
@@ -25,8 +24,7 @@
             <div id="ajax"></div>
         </div>
 
-        <span id="boton" style="display:none;"><input type="submit" value="GENERAR" class="btn btn-primary"> | </span>
-        <a class="btn btn-default" href="{{ path('periodorendicion') }}">IR AL LISTADO</a>
+        <span id="boton" style="display:none;"><input type="submit" value="GENERAR" class="btn btn-primary"></span>
 
     </form>
     <br><br><br>
@@ -36,7 +34,7 @@
 
             $('#reporte_corresponsalia').click(function(){
                 var dato = $("#reporte_corresponsalia").val();
-                var ruta = "{{ path('ajaxreporteauef', {'dato': 'variable','muestra': '2'}) }}";
+                var ruta = "{{ path('ajaxreporterendicion', {'dato': 'variable','muestra': '2'}) }}";
                 ruta = ruta.replace("variable", dato);
                 $('#ajax').load(ruta);
                 $('#boton').hide();
