--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/auditoriaestadofondo.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/auditoriaestadofondo.html.twig
@@ -25,8 +25,7 @@
             <div id="ajax"></div>
         </div>
 
-        <span id="boton" style="display:none;"><input type="submit" value="GENERAR" class="btn btn-primary"> | </span>
-        <a class="btn btn-default" href="{{ path('periodorendicion') }}">IR AL LISTADO</a>
+        <span id="boton" style="display:none;"><input type="submit" value="GENERAR" class="btn btn-primary"></span>
 
     </form>
     <br><br><br>
