Formulario de nuevo equipo al 80%

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,6 +54,6 @@
                 </footer>
             </div>
         </div>
-        
     </body>
+    {% block js_tecnologia %}{% endblock %}
 </html>
