--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/new.html.twig
@@ -6,19 +6,19 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script>
-        $(function(){
-            $("#tecnologia_equipo_marca").change(function(){
+    <script type="text/javascript">
+        jQuery(function(){
+            jQuery("#tecnologia_equipo_marca").change(function(){
                 var data = {
-                    marca_id: $(this).val()
+                    marca_id: jQuery(this).val()
                 };
 
-                $.ajax({
+                jQuery.ajax({
                     type: 'post',
                     url: '{{ path("tecnoequipo_select") }}',
                     data: data,
                     success: function(data) {
-                        var $modelo_selector = $('#tecnologia_equipo_modelo');
+                        var $modelo_selector = jQuery('#tecnologia_equipo_modelo');
                          $modelo_selector.html('<option>Selecciona</option>');
                         for(var i in data){
                             $modelo_selector.append('<option value="' + data[i].id + '">' + data[i].nombre + '</option>');
@@ -28,14 +28,15 @@
             });
         });
         
-        $(function() {
-            $( ".datepicker" ).datepicker({
+        jQuery(function() {
+            jQuery( ".datepicker" ).datepicker({
                 showOn: "button",
                 buttonImage: "{{ asset('images/calendario/calendar.gif') }}",
                 buttonImageOnly: true
             });
         });
     </script>
+    <script type="text/javascript" src="{{ asset('js/Tecnologia/new_equipo.js') }}"></script>
 {% endblock %}
     
 {% block body -%}
@@ -50,7 +51,7 @@
 
     <form novalidate method="post" action="{{ path('tecnoequipo_create') }}">
         {{ form_widget(form._token) }}
-        <div class="formShow" style="width:70%;">
+        <div id="wrapper-form" class="formShow" style="width:70%;">
             <div class="contenedorform">
                 <div class="labelform">Categoria:</div>
                 <div class="widgetform">{{ form_widget(form.categoria) }}</div>
@@ -78,10 +79,6 @@
             <div class="contenedorform">
                 <div class="labelform">Condicion:</div>
                 <div class="widgetform">{{ form_widget(form.condicion) }}</div>
-            </div>
-            <div class="contenedorform">
-                <div class="labelform">observacion Condicion:</div>
-                <div class="widgetform">{{ form_widget(form.observacionCondicion) }}</div>
             </div>
         </div>
         
