permisos en security

--- a/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
+++ b/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
@@ -36,9 +36,9 @@
 
       <form class="form-signin" action="{{ path('usuario_login_check') }}" method="post">
         <h4 class="form-signin-heading">INGRESE SUS DATOS</h4>
-        <input type="text" id="username" name="_username" class="input-block-level"placeholder="Ingrese usuario..." data-placement="right" data-content="Puede ingresar el mismo usuario y clave de su correo Zimbra. Ante cualquier inconveniente comunicarse con la extensión 264/339." title="USUARIO">
+        <input type="text" id="username" name="_username" class="input-block-level"placeholder="Ingrese usuario..." data-placement="right" data-content="" title="USUARIO">
         <input type="password" name="_password" class="input-block-level" placeholder="Ingrese clave...">
-        <button class="btn btn-large btn-primary" type="submit" id="botonsubmit">Ingresar</button>
+        <button class="btn btn-large btn-primary" type="submit" id="botonsubmit">INGRESAR</button>
       </form>
 
     <br>
