--- a/src/Administracion/UsuarioBundle/Resources/views/User/cambioclave.html.twig
+++ b/src/Administracion/UsuarioBundle/Resources/views/User/cambioclave.html.twig
@@ -1,17 +1,18 @@
-{% extends '::administracion.html.twig' %}
+{% extends '::base.html.twig' %}
 
-{% block title %}Inicio - Telesur{% endblock %}
+{% block title %}CORRESPONSALÍA - CAMBIO CLAVE{% endblock %}
 
 {% block titulobanner %}
-    CAMBIO DE CLAVE
+    CAMBIO CLAVE
+{% endblock %}
+
+{% block titulomodulo %}
+    <h1>CAMBIO DE CLAVE</h1>
 {% endblock %}
 
 {% block body %}
 
     {{ parent() }}
-
-    <div class="titulo">CAMBIO DE CLAVE</div>
-
 
     {% for flashMessage in app.session.flashbag.get('notice') %}
         <div class="alert alert-success">
@@ -30,23 +31,23 @@
         <br>
         <div class="formShow">
             <div class="contenedorform">
-            	<div class="text-error">{{ form_errors(form.claveanterior) }}</div>
+            	<div class="text-danger">{{ form_errors(form.claveanterior) }}</div>
                 <div class="labelform">Clave anterior:</div>
                 <div class="widgetform">{{ form_widget(form.claveanterior) }}</div>
             </div>
             <div class="contenedorform">
-            	<div class="text-error">{{ form_errors(form.clavenueva) }}</div>
+            	<div class="text-danger">{{ form_errors(form.clavenueva) }}</div>
                 <div class="labelform">Clave nueva:</div>
                 <div class="widgetform">{{ form_widget(form.clavenueva) }}</div>
             </div>
             <div class="contenedorform">
-            	<div class="text-error">{{ form_errors(form.claveconfirmacion) }}</div>
+            	<div class="text-danger">{{ form_errors(form.claveconfirmacion) }}</div>
                 <div class="labelform">Clave confirmación:</div>
                 <div class="widgetform">{{ form_widget(form.claveconfirmacion) }}</div>
             </div>
         </div>
     
-        <button class="btn btn-primary" type="submit">Cambiar clave</button>
+        <button class="btn btn-danger" type="submit">CAMBIAR CLAVE</button>
       
     </form>
 
