--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -128,6 +128,7 @@
         #}
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li><a href="{{ path('cambioclave') }}">CAMBIAR CLAVE</a></li>
       <li><a href="{{ path('usuario_logout') }}">SALIR</a></li>
       
     </ul>
