--- a/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
+++ b/src/Administracion/UsuarioBundle/Resources/views/Default/login.html.twig
@@ -36,13 +36,27 @@
 
       <form class="form-signin" action="{{ path('usuario_login_check') }}" method="post">
         <h4 class="form-signin-heading">INGRESE SUS DATOS</h4>
-        <input type="text" id="username" name="_username" class="input-block-level"placeholder="Ingrese usuario..." data-placement="right" data-content="" title="USUARIO">
+        <input type="text" id="username" name="_username" class="input-block-level"placeholder="Ingrese usuario..." data-placement="right" data-content="Ante cualquier inconveniente, escríbenos a la siguiente dirección: aplicaciones@telesurtv.net" title="USUARIO">
         <input type="password" name="_password" class="input-block-level" placeholder="Ingrese clave...">
-        <button class="btn btn-large btn-primary" type="submit" id="botonsubmit">INGRESAR</button>
+
+
+        <button class="btn btn-large btn-primary" type="submit" id="botonsubmit"
+        {% if navegador=='IExplorer' %}
+            disabled="disabled"
+        {% endif %}
+        >INGRESAR</button>
       </form>
 
     <br>
 
-    <script>$('#username').popover();</script>
+    <script>
+        $('#username').popover();
+
+        {% if navegador=='IExplorer' %}
+            alert(' Esta aplicación no funciona correctamente en internet explorer, por favor ejecútela en otro navegador. El boton de inicio ha sido deshabilitado.')
+        {% endif %}
+
+    </script>
+
 
 {% endblock %}
