--- a/web/css/general.css
+++ b/web/css/general.css
@@ -11,7 +11,8 @@ Purpose of the stylesheet follows.
 }
 
 body{
-background-color       :#efefef;
+	background: url('../images/fondo.jpg');
+/*background-color       :#efefef;*/
 margin-top             :0;
 font-size              :12px;
 font-family            :VERDANA;
@@ -32,6 +33,7 @@ line-height            :20px;
 background-color       :white;
 width                  :1100px;
 box-shadow: 0px 2px 0px 2px #999;
+
 }
 
 #banner{
