cambios consultoria y personal 14052014

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Contrato/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Contrato/index.html.twig
@@ -40,7 +40,7 @@
     </table>
     <br><br>
     {% if is_granted('ROLE_ADMIN') %}
-        <a class="btn btn-primary" href="http://aplicaciones.telesurtv.net/sait/web/app.php/contratos/inicio">NUEVO CONTRATO</a><br>
+        <a href="http://aplicaciones.telesurtv.net/sait/web/app.php/contratos/inicio">PARA EDITAR O CREAR CONTRATOS</a><br>
     {% endif %}
     <script>
         $(document).ready(function(){
