--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -54,7 +54,7 @@
       </li>
       {% endif %}
 
-      {% if is_granted('ROLE_PERSONAL') %}
+      {% if is_granted('ROLE_PERSONAL') or is_granted('ROLE_ADMIN') %}
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">PERSONAL <b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -64,7 +64,7 @@
       </li>
       {% endif %}
 
-      {% if is_granted('ROLE_CONSULTORIA') %}
+      {% if is_granted('ROLE_CONSULTORIA') or is_granted('ROLE_ADMIN') %}
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONSULTORIA <b class="caret"></b></a>
         <ul class="dropdown-menu">
