--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Representante/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Representante/index.html.twig
@@ -15,7 +15,7 @@
     <table id="tablalista" style="width: 97%;">
         <thead>
             <tr>
-                <th>Nombre</th>
+                <th width="30%">Nombre</th>
                 <th>Sueldo</th>
                 <th>Pasaporte</th>
                 <th>Fechaingreso</th>
