--- a/src/Administracion/UsuarioBundle/Resources/views/User/show.html.twig
+++ b/src/Administracion/UsuarioBundle/Resources/views/User/show.html.twig
@@ -41,7 +41,10 @@
             <div class="labelform">Apellidos:</div>
             <div class="widgetform">{{ entity.primerApellido  }} {{ entity.segundoApellido  }}</div>
         </div>
-
+        <div class="contenedorform">
+            <div class="labelform">Correo:</div>
+            <div class="widgetform">{{ entity.correo  }}</div>
+        </div>
     </div>
 <br>
 
