--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
@@ -21,6 +21,7 @@
     <br><table id="tablalista" style="width: 97%;" cellpadding="5px">
         <thead>
             <tr>
+                <th>Id</th>
                 <th style="width: 5%">Anio</th>
                 <th style="width: 5%">Mes</th>
                 <th style="width: 24%">Corresponsalía</th>
@@ -33,6 +34,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
+                <td>{{ entity.id }}</td>
                 <td>{{ entity.anio }}</td>
                 <td>{{ entity.mes }}</td>
                 <td>{{ entity.corresponsalia.nombre }}</td>
@@ -94,7 +96,7 @@
     $(document).ready(function(){
        $('#tablalista').dataTable( { //CONVERTIMOS NUESTRO LISTADO DE LA FORMA DEL JQUERY.DATATABLES- PASAMOS EL ID DE LA TABLA
             "sPaginationType": "full_numbers", //DAMOS FORMATO A LA PAGINACION(NUMEROS)
-            "aaSorting": [[5,'asc'],[1,'asc'],[2,'asc']],
+            "aaSorting": [[6,'asc'],[2,'asc'],[3,'asc']],
         } );
     })
     </script>
