--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Equipo/show.html.twig
@@ -4,8 +4,6 @@
 
 {% block body -%}
     {{ parent() }}
-    
-
     <div class="formShow" style="width:80%;">
         <div class="contenedorform">
             <div class="labelform">Id:</div>
@@ -25,21 +23,39 @@
         </div>
         <div class="contenedorform">
             <div class="labelform">status:</div>
-            <div class="widgetform">{{ entity.status }}</div>
+            <div class="widgetform">
+                {% if entity.status %}
+                    <span class="label label-success">Activo</span>
+                {% else %}
+                    <span class="label label-danger">Inactivo</span>
+                {% endif %}
+            </div>
         </div>
         <div class="contenedorform">
-            <div class="labelform">observacion Condicion:</div>
-            <div class="widgetform">{{ entity.observacionCondicion }}</div>
+            <div class="labelform">Condicion:</div>
+            <div class="widgetform">{{ entity.condicion.nombre }}</div>
         </div>
+        {% if entity.observacionCondicion|length > 0 %}
+            <div class="contenedorform">
+             <div class="labelform">Observacion Condicion:</div>
+             <div class="widgetform">{{ entity.observacionCondicion }}</div>
+            </div>
+        {% endif %}
         <div class="contenedorform">
             <div class="labelform">fecha Adquisicion:</div>
             <div class="widgetform">{{ entity.fechaAdquisicion|date('d-m-Y') }}</div>
         </div>
     </div>
-
+   
     <a class="btn btn-default" href="{{ path('tecnoequipo_edit', { 'id': entity.id }) }}">IR A EDITAR</a> | 
-    <a class="btn btn-default" href="{{ path('tecnoequipo') }}">IR AL LISTADO</a>
-  
+    <a class="btn btn-default" href="{{ path('tecnoequipo') }}">IR AL LISTADO</a> 
+    {% if entity.status %}
+        {% if asignacion == false %}
+            | <a class="btn btn-default" href="{{ path('tecnoasignar_new', { 'id': entity.id }) }}">ASIGNAR</a>
+        {% else %}
+            | <a class="btn btn-default" href="{{ path('tecnoasignar_show', { 'id': entity.id }) }}">VER ASIGNACIÓN</a>
+        {% endif %}
+    {% endif %}
     <BR><BR>
     {{ form_start(delete_form, { 'attr': {'onsubmit': 'return confirm("¿Seguro que deseas eliminar?")'} }) }}
         {{ form_errors(delete_form) }}
