asignacion inicial y final

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/edit.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/edit.html.twig
@@ -47,7 +47,7 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Saldo inicial:</div>
-                <div class="widgetform">{{ form_widget(edit_form.saldoinicial) }}</div>
+                <div class="widgetform">{{ form_widget(edit_form.saldoinicial,{'attr':{'readonly':'readonly'}}) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Recurso enviado:</div>
