--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/show.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/show.html.twig
@@ -7,6 +7,10 @@
        
     <div class="formShow" style="width:80%;">
         <div class="contenedorform">
+            <div class="labelform">Id Periodo:</div>
+            <div class="widgetform">{{ entity.periodorendicion.id }}</div>
+        </div>
+        <div class="contenedorform">
             <div class="labelform">Corresponsalia:</div>
             <div class="widgetform">{{ entity.periodorendicion.corresponsalia.nombre|upper }}</div>
         </div>
